<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="896dp"
    tools:context=".Login"
    android:background="@drawable/login_bg">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="188dp"
        android:layout_height="177dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo">

    </ImageView>

    <TextView
        android:id="@+id/signup_appname"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_marginStart="160dp"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:text="@string/traveee"
        android:textAppearance="@style/appname"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/signup_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/app_icon"
        android:text="@string/travel"
        android:textAppearance="@style/travel"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_below="@id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp">



        <TextView
            android:id="@+id/login_email"
            android:layout_width="48.71dp"
            android:layout_height="27.09dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/email" />

        <EditText
            android:id="@+id/login_email2"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/login_box"
            android:ems="10"
            android:hint="   email"
            android:inputType="text" />

        <TextView
            android:id="@+id/login_pass"
            android:layout_width="wrap_content"
            android:layout_height="27.09dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="29dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/login_pass2"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:autofillHints="password"
            android:background="@drawable/login_box"
            android:ems="10"
            android:hint="   password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/l_forgot_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textColor="@color/white"
            android:text="Forgot Password?"
            android:layout_gravity="right"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:background="@drawable/signup_login"
            android:onClick="loginUser"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/callSignup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textColor="#272727"
            android:textSize="18sp"
            android:text="New User? Sign UP"
            android:layout_gravity="center"
            android:layout_margin="5dp"/>


    </LinearLayout>

</RelativeLayout>